APIs/microsoft.com/cognitiveservices-Training/1.2/java-client/docs/Project.md


# Project

Represents a project

## Properties

| Name | Type | Description | Notes |
|------------ | ------------- | ------------- | -------------|
|**created** | **OffsetDateTime** | Gets the date this project was created |  [optional] [readonly] |
|**currentIterationId** | **UUID** | Gets the current iteration id |  [optional] [readonly] |
|**description** | **String** | Gets or sets the description of the project |  [optional] |
|**id** | **UUID** | Gets the project id |  [optional] [readonly] |
|**lastModified** | **OffsetDateTime** | Gets the date this project was last modified |  [optional] [readonly] |
|**name** | **String** | Gets or sets the name of the project |  [optional] |
|**settings** | [**ProjectSettings**](ProjectSettings.md) |  |  [optional] |
|**thumbnailUri** | **String** | Gets the thumbnail url representing the image |  [optional] [readonly] |



